fix: gap on nav / feat: gradient header

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    font-size: 16px; 
+    font-size: 16px; /*1 rem = 16px */
 }
 
 body{
@@ -13,17 +13,49 @@ body{
     font-weight: 700;
 }
 
+
+header{
+    position: relative;
+    background-image: url(assets/coding.gif);
+    height: 55rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+header::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
 nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 4.2rem 6.6rem;
+    padding: 0.625rem; /* 10px */
+    position: relative;
+    top: 0;
+    z-index: 2;
 }
+
+
+
+h1{
+    color: white;
+    padding-left: 4rem;
+}
+
 
 ul{
     display: flex;
-    gap: 1rem;
+    gap: 1.2rem;
     list-style: none;
+    margin: 2.5rem;
 }
 
 a{
@@ -31,10 +63,3 @@ a{
     color: white;
 }
 
-header{
-    background-image: url(/assets/coding.gif);
-    height: 0.8rem;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.72) 0%, rgba(0, 0, 0, 0.72) 100%), url(<path-to-image>) lightgray 50%
-}
